// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: InfoTooltip ui custom content 1`] = `
<div>
  <span
    aria-describedby="2"
    role="button"
    style="outline: 0;"
    tabindex="0"
  >
    <i
      class="icon material-icons"
      style="font-size: 16px;"
    >
      info
    </i>
  </span>
</div>
`;

exports[`Component: InfoTooltip ui default 1`] = `
<div>
  <span
    aria-describedby="1"
    role="button"
    style="outline: 0;"
    tabindex="0"
  >
    <i
      class="icon material-icons"
      style="font-size: 16px;"
    >
      info
    </i>
  </span>
</div>
`;
